# freecad-junk-rigs

./: CMakeLists.txt  Init.py  InitGui.py  JunkResource.py  JunkRig.dox  JunkRig.ui  JunkRigGui.py  Sail.py
Resources/: JunkRig.qrc
